Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
     <div class="footer">
       <p>BreadFlex Pro v2.0 • Sistem Pengiraan Roti dengan 1 Titik Perpuluhan</p>
-      <p>© 2024 Kalkulator Industri Bakeri</p>
+      <p>© 2026 Kalkulator Roti Garlic Nadieyah Homemade</p>
     </div>
   </div>
 
@@ -777,3 +777,4 @@
   </script>
 </body>
                                                                                    </html>
+
